--- a/_pages/project.html
+++ b/_pages/project.html
@@ -235,8 +235,19 @@ author_profile: true
   </div>
 </div>
 
-<nav style="margin-bottom: 30px; padding: 10px 0; border-bottom: 1px solid #e0e0e0;">
-  <a href="/" style="color: #52adc8; text-decoration: none;">Home</a> 
-  <span style="color: #999;"> / </span>
-  <span style="color: #666;">{{ page.title }}</span>
-</nav>
+<div style="display: flex; align-items: center; gap: 10px;">
+  <h2 style="margin: 0; white-space: nowrap; border: none">
+    <div style="height: 75px;"></div>
+    <nav style="margin-bottom: 0px; padding: 10px 0">
+      <a href="/" style="color: #52adc8; text-decoration: none;">Home</a> 
+      <span style="color: #999;"> / </span>
+      <span style="color: #666;">{{ page.title }}</span>
+    </nav>
+  </h2>
+
+  <img src="/images/robot_see.png"
+       alt="AI visualization"
+       style="max-width: 180px; height: auto;">
+  
+</div>
+<div style="border-bottom: 1px solid #e0e0e0"></div>
